
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_4__ TYPE_2__ ;
typedef struct TYPE_3__ TYPE_1__ ;


struct TYPE_4__ {int u3; } ;
struct TYPE_3__ {int u3; } ;
struct nf_conntrack_tuple {TYPE_2__ dst; TYPE_1__ src; } ;


 int memset (int *,int ,int) ;

__attribute__((used)) static bool generic_invert_tuple(struct nf_conntrack_tuple *tuple,
     const struct nf_conntrack_tuple *orig)
{
 memset(&tuple->src.u3, 0, sizeof(tuple->src.u3));
 memset(&tuple->dst.u3, 0, sizeof(tuple->dst.u3));

 return 1;
}
